setup common entities, utils and configs

--- a/.env
+++ b/.env
@@ -12,6 +12,32 @@ DB_PORT=5432
 DB_TYPE=postgres
 
 
+#URLS
+FRONTEND_BASE_URL=http://localhost:5173
+
+
+#media
+MEDIA_UPLOAD_PATH=
+TEMP_FOLDER_PATH=
 
 #Logging
 LOG_LEVEL=DEVELOPMENT
+
+
+#SECRETS
+JWT_SECRET=
+JWT_EXPIRY= #1d
+JWT_REFRESH_SECRET=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET = 
+GEMINI_API_KEY=
+
+#CRYPTO SECRETS
+ENCRYPTION_KEY=''  #32 characters
+IV='' #16 characters
+
+
+#MAIL
+MAIL_HOST=
+MAIL_USER=
+MAIL_PASS=
