add: user auth services

--- a/.env
+++ b/.env
@@ -7,26 +7,27 @@ PORT=8000
 HOST=localhost 
 DB_USER=tj
 DB_PASSWORD=pwd
-DB_NAME=abc
+DB_NAME=anbc
 DB_PORT=5432
 DB_TYPE=postgres
 
 
 #URLS
 FRONTEND_BASE_URL=http://localhost:5173
+BASE_URL=http://localhost:8000
 
 
 #media
-MEDIA_UPLOAD_PATH=
-TEMP_FOLDER_PATH=
+MEDIA_UPLOAD_PATH=/public/uploads/
+TEMP_FOLDER_PATH=/public/temp/
 
 #Logging
 LOG_LEVEL=DEVELOPMENT
 
 
 #SECRETS
-JWT_SECRET=
-JWT_EXPIRY= #1d
+JWT_SECRET=b1bed4c41300a6063a8153cd92cf1908 #openssl rand -hex 16
+JWT_EXPIRY='1h'
 JWT_REFRESH_SECRET=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET = 
