--- a/.env-example
+++ b/.env-example
@@ -12,6 +12,33 @@ DB_PORT=
 DB_TYPE=
 
 
+#URLS
+FRONTEND_BASE_URL=
+BASE_URL=
+
+
+#media
+MEDIA_UPLOAD_PATH=/public/uploads/
+TEMP_FOLDER_PATH=/public/temp/
 
 #Logging
 LOG_LEVEL=
+
+
+#SECRETS
+JWT_SECRET= #openssl rand -hex 16
+JWT_EXPIRY='1h'
+JWT_REFRESH_SECRET=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET = 
+GEMINI_API_KEY=
+
+#CRYPTO SECRETS
+ENCRYPTION_KEY=''  #32 characters
+IV='' #16 characters
+
+
+#MAIL
+MAIL_HOST=
+MAIL_USER=
+MAIL_PASS=
