--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "tsoa spec-and-routes && ts-node-dev --respawn --transpile-only src/index.ts",
-    "dev": "tsoa spec-and-routes && ts-node-dev --respawn --transpile-only src/index.ts",
+    "start:dev": "tsoa spec-and-routes && ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "tsoa spec-and-routes && ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsoa spec-and-routes && tsc",
     "start": "node build/src/index.js"
   },
@@ -13,11 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^5.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/http-status-codes": "^1.2.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.7",
     "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
@@ -26,10 +31,6 @@
   },
   "dependencies": {
     "@tsoa/runtime": "^6.6.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.8",
-    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -39,6 +40,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.4",
     "nodemailer": "^6.10.0",
