fix merge conflicts

--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ NODE_ENV=DEVELOPMENT
 #db configs
 PORT=8000
 HOST=localhost 
-DB_USER=tj
-DB_PASSWORD=pwd
-DB_NAME=anbc
+DB_USER=root
+DB_PASSWORD=iamsohappy
+DB_NAME=businesscanada
 DB_PORT=5432
 DB_TYPE=postgres
 
