feat: user registration

--- a/.env-example
+++ b/.env-example
@@ -39,6 +39,6 @@ IV='' #16 characters
 
 
 #MAIL
-MAIL_HOST=
-MAIL_USER=
+MAIL_HOST=  #for gmail use smtp.gmail.com
+MAIL_USER=  #for gmail use your email
 MAIL_PASS=
