update: env example

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,7 @@ LOG_LEVEL=
 JWT_SECRET= #openssl rand -hex 16
 JWT_EXPIRY='1h'
 JWT_REFRESH_SECRET=
+JWT_REFRESH_EXPIRY='7d'
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET = 
 GEMINI_API_KEY=
