--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:dev": "tsoa spec-and-routes && ts-node-dev --respawn --transpile-only src/server.ts",
     "dev": "tsoa spec-and-routes && ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsoa spec-and-routes && tsc",
-    "start": "node build/src/index.js"
+    "start": "node build/src/index.js",
+    "seed:admin": "ts-node src/seeders/admin.seed.ts add"
   },
   "keywords": [],
   "author": "",
