--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "dev": "tsoa spec-and-routes && ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsoa spec-and-routes && tsc",
     "start": "node build/src/index.js",
-    "seed:admin": "ts-node src/seeders/admin.seed.ts add"
+    "seed:admin": "ts-node src/seeders/admin.seed.ts add",
+    "prepare": "husky",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.8",
@@ -25,9 +29,13 @@
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.7",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.24.1",
     "winston": "^3.17.0"
   },
   "dependencies": {
