--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "multer": "1.4.4",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
+    "stripe": "^17.6.0",
     "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.6.0",
     "typeorm": "^0.3.20",
